# lofter2telegram

./: .env.example  README.md  main.py  pyproject.toml
src/: config.py
src/core/: bot.py  cache.py  scheduler.py
src/defs/: cache.py  timeline.py
src/plugins/: ping.py  tags.py  update.py
src/utils/: log.py
